Added preliminary hrr tests

--- a/hrr/HRR.ipynb
+++ b/hrr/HRR.ipynb
@@ -852,15 +852,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1280,9 +1271,7 @@
     "Scaling Values\n",
     "-------\n",
     "\n",
-    "Here we see how scaling a value in any range to 0 - 100 looks like.\n",
-    "\n",
-    "Test will no longer work since @classmethod was removed from scale."
+    "Here we see how scaling a value in any range to 0 - 100 looks like."
    ]
   },
   {
@@ -1296,7 +1285,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  0 100]\n",
+      "[-500, 500]\n",
       "[-500, 500]\n",
       "25.0\n",
       "60.0\n",
@@ -1306,14 +1295,15 @@
     }
    ],
    "source": [
+    "from hrr import HRR\n",
     "HRR.reset_kernel()\n",
     "print(HRR.input_range)\n",
     "HRR.input_range = [-500,500]\n",
     "print(HRR.input_range)\n",
-    "print(HRR.scale(-250))\n",
-    "print(HRR.scale(100))\n",
-    "print(HRR.scale(450))\n",
-    "print(HRR.scale(-375))"
+    "print(HRR.scale(-250,100))\n",
+    "print(HRR.scale(100,100))\n",
+    "print(HRR.scale(450,100))\n",
+    "print(HRR.scale(-375,100))"
    ]
   },
   {
@@ -1327,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -1336,12 +1326,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Distance from door is 0.00164226662685\n",
-      "Distance from tree is -0.00819994397512\n",
-      "{0: 20, 1: 10}\n",
-      "Distance from door is 0.306168016891\n",
-      "Distance from tree is -0.0924315528678\n",
-      "{'door': 0.30616801689077988}\n"
+      "Distance from door is 0.0111622978429\n",
+      "Distance from tree is 0.0022659146159\n",
+      "{0: 10, 1: 20}\n",
+      "Distance from door is 0.303861077456\n",
+      "Distance from tree is -0.0798013433976\n",
+      "{'door': 0.30386107745638741}\n"
      ]
     }
    ],
