Minor bugfixes to tcp

--- a/tcp/tcp.ipynb
+++ b/tcp/tcp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -11,7 +11,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  1.00000000e+01   6.12323400e-16   1.00000000e+01]\n"
+      "[ 20.   0.]\n",
+      "[ 10.  10.]\n"
      ]
     }
    ],
@@ -20,7 +21,10 @@
     "\n",
     "TCP.verbose = False\n",
     "\n",
-    "t = TCP([[0,90],[90,0]],d3=True)\n",
+    "t = TCP([0,0])\n",
+    "t.computeTcp()\n",
+    "print(t.tcp)\n",
+    "t.setAngles([90,0])\n",
     "t.computeTcp()\n",
     "print(t.tcp)"
    ]
