Fixed error where corners of the map were not regarded correctly

--- a/slam/slam_map.ipynb
+++ b/slam/slam_map.ipynb
@@ -44,9 +44,9 @@
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]\n",
       "[[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  1.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  1.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  7.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  1.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
@@ -93,7 +93,19 @@
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  1.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]\n",
-      "{(3, 3): 'truck'}\n"
+      "{(3, 3): 'truck'}\n",
+      "Can't go right!\n",
+      "[[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  1.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  7.]\n",
+      " [ 0.  0.  0.  1.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  1.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]\n",
+      "{(1, 9): 'boat'}\n"
      ]
     }
    ],
@@ -120,6 +132,16 @@
     "s.left()\n",
     "s.showMap()\n",
     "s.left()\n",
+    "s.showMap()\n",
+    "print(s.detect())\n",
+    "s.up()\n",
+    "s.right()\n",
+    "s.right()\n",
+    "s.right()\n",
+    "s.right()\n",
+    "s.right()\n",
+    "s.right()\n",
+    "s.up()\n",
     "s.showMap()\n",
     "print(s.detect())"
    ]
