Implemented circular HRRs, minor code refactor to have common methods in VSAs

--- a/slam/slam_map.ipynb
+++ b/slam/slam_map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -95,6 +95,7 @@
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]\n",
       "{(3, 3): 'truck'}\n",
       "Can't go right!\n",
+      "Can't go up!\n",
       "[[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  1.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  7.]\n",
