Implemented Coordinate Encoder and Decoder

--- a/vsa/HRR.ipynb
+++ b/vsa/HRR.ipynb
@@ -1317,21 +1317,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Distance from door is -0.0100284284988\n",
-      "Distance from tree is 0.0270892649772\n",
-      "{11: 1, 20: 1}\n",
-      "Distance from door is 0.306922152324\n",
-      "Distance from tree is -0.0877631779485\n",
-      "{'door': 0.30692215232440889}\n"
+     "ename": "TypeError",
+     "evalue": "decode() takes at most 2 arguments (3 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-ea77eb69b50b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;31m#print(m / 49)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;31m#print(m / 83)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;34m\"tree\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;36m77\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/disk/users/lesi/holographic/vsa/hrr.pyc\u001b[0m in \u001b[0;36m__div__\u001b[1;34m(self, operand)\u001b[0m\n\u001b[0;32m    128\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmemory\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    129\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 130\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmemory\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalid_range\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    131\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    132\u001b[0m     \u001b[1;31m## Overload of the \"**\" operand.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: decode() takes at most 2 arguments (3 given)"
      ]
     }
    ],
@@ -1374,24 +1374,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[([4.1, -15.92], 1), ([8.129999999999999, 15.920000000000002], 1)]\n",
+      "[([4.1, -15.879999999999999], 1), ([8.100000000000001, 15.920000000000002], 1)]\n"
+     ]
+    }
+   ],
    "source": [
     "from hrr import HRR\n",
     "%matplotlib inline \n",
-    "HRR.set_size(10000)\n",
+    "HRR.set_size(1000000)\n",
     "HRR.reset_kernel()\n",
-    "HRR.visualize = True\n",
+    "HRR.visualize = False\n",
     "HRR.stddev = 0.02\n",
     "HRR.valid_range = ((0,10),(-20,20))\n",
     "\n",
-    "m = HRR((4.1, -15.9))\n",
-    "n = HRR((9.1, 15.9))\n",
-    "m = m + n\n",
-    "print(m.decodeCoordinate(dim=2,return_list=True))"
+    "m = HRR((4.1, -15.9)) \n",
+    "m = m * \"Teeth\"\n",
+    "m+= HRR((8.1, 15.9)) * \"Teeth\"\n",
+    "m = m % \"Teeth\"\n",
+    "print(m.decodeCoordinate(dim=2,return_list=True))\n",
+    "\n",
+    "n = HRR((4.1, -15.9)) + (8.1, 15.9)\n",
+    "print(n.decodeCoordinate(dim=2,return_list=True))"
    ]
   },
   {
