Added cover photo, changed title.

--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -322,7 +322,7 @@
 	% not capitalized unless they are the first or last word of the title.
 	% Linebreaks \\ can be used within to get better formatting as desired.
 	% Do not put math or special symbols in the title.
-	\title{Implicit Holographic Memories}
+	\title{Perceptual symbol grounding in \\holographic memories}
 	
 	
 	% author names and affiliations
@@ -403,6 +403,14 @@
 	In addition, every VSA can be considered as a lossy compression technique, since binary operations on N-element vectors return N-element vectors as well.
 	
 	Depending of the way these three operations are implemented we can distinguish several popular VSAs, such as Holographic Reduced Representations \cite{hrr-1}, Circular HRRs \cite{circular-hrr}, Binary Spatter Codes \cite{bsc-1}, Holographic Graph Neurons\cite{holographic-graph-nouron}, Geometric Algebras\cite{geometric-algebra} and Random Permutations. The most widely used ones are HRRs and they are briefly explained in section \ref{sec:hrr}. Authors in \cite{learning-language} have used them to solve word embedding problem for extremely large dataset by replacing computationally expensive big matrix factorization with iterative estimation algorithm based on HRRs. Some of the other work is centered around pattern recognition \cite{pattern-recognition}, functional large-scale cognitive architecture models \cite{spaun} and representing scene structure \cite{scene-structure}. Some preliminary theoretical assumptions have been made about ability to use them as agent controllers\cite{embedding-behaviour}, where a symbolic program is represented with a set of combined symbolic actions associated with actuator symbols and symbolic sensing.
+	
+	
+	\begin{figure}
+		\center
+		\includegraphics[width=0.9\columnwidth]{img/cover_photo.png}
+		\caption{In-memory representation of top-down attention shift for visual scene short-term  memory}
+	\end{figure}
+	
 	
 	Authors in \cite{spaun} have demonstrated functional cognitive model Spaun, implemented as HRRs using biologically plausible models of neuron dynamics, is capable of performing 7 different cognitive tasks. In serial memory task they show that model of forgetting exhibits similar behavior as human working memory due to limited capacity. Besides that, they report similarity between human working memory capacity and average number of items (symbols) that their model is capable of holding in memory. This successful model of forgetting is one of the reasons our work is centered around HRRs.
 	
